# Copyright (C) 2015-2019 Red Hat, Inc.
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; version 2 of the License.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
# MA  02110-1301, USA.  A copy of the GNU General Public License is
# also available at http://www.gnu.org/copyleft/gpl.html.
#
# SPDX-License-Identifier: GPL-2.0
brandingdir=$(prefix)/share/ovirt-release-host-node/branding
systemdpresetdir=$(prefix)/lib/systemd/system-preset

dist_branding_DATA = \
    cockpit/branding/branding.css \
    cockpit/branding/favicon.ico \
    cockpit/branding/ovirt_landing_bg_bottom_left.png \
    cockpit/branding/ovirt_landing_bg_top_right.png \
    cockpit/branding/ovirt_logo.png \
	$(NULL)

dist_systemdpreset_DATA = \
	systemd/system-preset/98-ovirt-host-node.preset \
	$(NULL)
